<resources>
    <string name="app_name">WOWBOOK</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrar">Registrar</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="criarConta">Criar Conta</string>
    <string name="wowme">WOWME!</string>
    <string name="palavrasurpresa">Palavra Surpresa</string>
    <string name="addlivro">Add Livro</string>
    <string name="addfoto">Add Foto</string>
    <string name="publicar">Publicar</string>
    <string name="wowteca">WowTeca</string>
    <string name="sobremim">Sobre Mim</string>
    <string name="username">username</string>
</resources>
